--- a/stindex.html
+++ b/stindex.html
@@ -12,6 +12,16 @@
 
     <center>
 
+        <div id="pass">
+  <div class="popup">
+    <h4>Admin Login</h4>
+    <input type="password" id="password1" class="form-control" placeholder="Enter password">
+    <br>
+    <button onclick="checkPass(event)" class="btn btn-success">Submit</button>
+    <button onclick="closePass()" class="btn btn-secondary">Cancel</button>
+  </div>
+</div>
+
        
 
     <div>
