--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </head>
-<body>
+<body onload="lock()">
  
     <div style="
       display: flex;
@@ -18,21 +18,11 @@
       height: 100vh;
       gap: 10px;
     ">
-      <button onclick="openPass()" class="btn btn-primary btn-lg">Admin</button>
+      <button onclick="openAdmin()" class="btn btn-primary btn-lg">Admin</button>
       <a href="result.html" class="btn btn-primary btn-lg">Results</a>
     </div>
 
 
-
-  <div id="pass">
-  <div class="popup">
-    <h4>Admin Login</h4>
-    <input type="password" id="password1" class="form-control" placeholder="Enter password">
-    <br>
-    <button onclick="checkPass()" class="btn btn-success">Submit</button>
-    <button onclick="closePass()" class="btn btn-secondary">Cancel</button>
-  </div>
-</div>
 
    
 </body>
